--- a/Python_Question/Python basic (Part -I).ipynb
+++ b/Python_Question/Python basic (Part -I).ipynb
@@ -1055,6 +1055,395 @@
     "c = sqrt(a**2 + b**2)\n",
     "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distance in inches is 60 inches.\n",
+      "The distance in yards is 1.67 yards.\n",
+      "The distance in miles is 0.00 miles.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#61. Write a Python program to convert the distance (in feet) to inches, yards, and miles. \n",
+    "d_ft = int(input('Input distance in feet: '))\n",
+    "d_inches = d_ft * 12\n",
+    "d_yards = d_ft / 3.0\n",
+    "d_miles = d_ft / 5280.0\n",
+    "print(\"The distance in inches is %i inches.\" % d_inches)\n",
+    "print(\"The distance in yards is %.2f yards.\" % d_yards)\n",
+    "print(\"The distance in miles is %.2f miles.\" % d_miles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of seconds: 360244\n"
+     ]
+    }
+   ],
+   "source": [
+    "#62. Write a Python program to convert all units of time into seconds. \n",
+    "days = int(input('Input days: ')) * 3600 * 24\n",
+    "hours = int(input('Input hours: ')) * 3600\n",
+    "minutes = int(input(\"Input minutes: \")) * 60\n",
+    "seconds = int(input(\"Input seconds: \"))\n",
+    "time = days + hours + minutes + seconds\n",
+    "print(\"The amount of seconds:\", time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Absolute file path:  d:\\DATA ENGINEERING PREPARATION\\Python\\Python_Question\\test.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "#63. Write a Python program to get an absolute file path. \n",
+    "def absolute_file_path(path_fname):\n",
+    "    import os\n",
+    "    return os.path.abspath(path_fname)\n",
+    "print(\"Absolute file path: \", absolute_file_path(\"test.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red-White-Black\n"
+     ]
+    }
+   ],
+   "source": [
+    "#81. Write a Python program to concatenate N strings. \n",
+    "lst = ['Red','White','Black']\n",
+    "l = '-'.join(lst)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sum of the container:  60\n"
+     ]
+    }
+   ],
+   "source": [
+    "#82. Write a Python program to calculate the sum of all items of a container (tuple, list, set, dictionary). \n",
+    "s = sum([10, 20, 30])\n",
+    "print(\"\\nSum of the container: \", s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#83. Write a Python program to test whether all numbers in a list are greater than a certain number. \n",
+    "num = [5,8,9]\n",
+    "for i in num:\n",
+    "    if i>7:\n",
+    "        print(True)\n",
+    "    else:\n",
+    "        print(False)\n",
+    "print(all(x > 1 for x in num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#84. Write a Python program to count the number of occurrences of a specific character in a string. \n",
+    "s = \"The quick brown fox jumps over the lazy dog.\"\n",
+    "print(s.count('o'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "#88. Given variables x=30 and y=20, write a Python program to print \"30+20=50\".\n",
+    "x = 30\n",
+    "y = 20\n",
+    "print(x+y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "First day of a Month!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#89. Write a Python program to perform an action if a condition is true.\n",
+    "#Given a variable name, if the value is 1, display the string \"First day of a Month!\" and do nothing if the value is\n",
+    "# not equal.\n",
+    "n = 1\n",
+    "if n == 1:\n",
+    "    print(\"\\nFirst day of a Month!\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#91. Write a Python program to swap two variables. \n",
+    "a = 20\n",
+    "b = 30\n",
+    "a,b = b,a \n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\#{'}${\"}@/\n"
+     ]
+    }
+   ],
+   "source": [
+    "#92. Write a Python program to define a string containing special characters in various forms. \n",
+    "print(\"\\#{'}${\\\"}@/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[65, 98, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#94. Write a Python program to convert the bytes in a given string to a list of integers. \n",
+    "x = b'Abc'\n",
+    "print(list(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#95. Write a Python program to check whether a string is numeric. \n",
+    "str = 'a123'\n",
+    "if str.isalnum():\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 60, 105]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#110. Write a Python program to get numbers divisible by fifteen from a list using an anonymous function. \n",
+    "num_list = [45, 55, 60, 37, 100, 105, 220]\n",
+    "result = list(filter(lambda x: (x%15==0), num_list))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Black', 'Green', 'White', 'Orange']\n",
+      "['Green', 'White', 'Orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#112. Write a Python program to remove the first item from a specified list. \n",
+    "color = [\"Red\", \"Black\", \"Green\", \"White\", \"Orange\"]\n",
+    "del color[0]\n",
+    "new_color = color[1:]\n",
+    "print(color)\n",
+    "print(new_color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "This is not a number. Try again...\n",
+      "\n",
+      "This is not a number. Try again...\n"
+     ]
+    }
+   ],
+   "source": [
+    "#113. Write a Python program that inputs a number and generates an error message if it is not a number. \n",
+    "while True:\n",
+    "    try:\n",
+    "        a = int(input(\"Input a number: \"))\n",
+    "    except ValueError:\n",
+    "        print(\"\\nThis is not a number. Try again...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive numbers in the said list:  [34, 1, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#114. Write a Python program to filter positive numbers from a list. \n",
+    "lst = [34, 1, 0, -23, 12, -88]\n",
+    "new_nums = list(filter(lambda x: x > 0, lst))\n",
+    "print(\"Positive numbers in the said list: \", new_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#115. Write a Python program to compute the product of a list of integers (without using a for loop). \n",
+    "from functools import reduce\n",
+    "nums = [10, 20, 30]\n",
+    "nums_product = reduce((lambda x, y: x * y), nums)\n",
+    "print(nums_product)"
+   ]
   }
  ],
  "metadata": {
