--- a/100+Python-challenging-programming-exercises/61-70.ipynb
+++ b/100+Python-challenging-programming-exercises/61-70.ipynb
@@ -197,6 +197,141 @@
     "values = [str(f(x)) for x in range(1,n+1)]\n",
     "print(','.join(values))"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Please write a program using generator to print the even numbers between 0 and n in comma separated form while n is input by console.\n",
+    "\n",
+    "Example: If the following n is given as input to the program:\n",
+    "\n",
+    "10\n",
+    "\n",
+    "Then, the output of the program should be:\n",
+    "\n",
+    "0,2,4,6,8,10\n",
+    "\n",
+    "Hints: Use yield to produce the next value in generator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,2,4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evenGenerator(n):\n",
+    "    i = 0\n",
+    "    while i<=n:\n",
+    "        if i%2==0:\n",
+    "            yield i\n",
+    "        i += 1\n",
+    "n = int(input())\n",
+    "values = []\n",
+    "for i in evenGenerator(n):\n",
+    "    values.append(str(i))\n",
+    "print(','.join(values))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Please write a program using generator to print the numbers which can be divisible by 5 and 7 between 0 and n in comma \n",
+    "separated form while n is input by console.\n",
+    "\n",
+    "Example: If the following n is given as input to the program:\n",
+    "\n",
+    "100\n",
+    "\n",
+    "Then, the output of the program should be:\n",
+    "\n",
+    "0,35,70\n",
+    "\n",
+    "Hints: Use yield to produce the next value in generator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,35,70\n"
+     ]
+    }
+   ],
+   "source": [
+    "def NumGenerator(n):\n",
+    "    i = 0\n",
+    "    while i<=n:\n",
+    "        if i%5==0 and i%7==0:\n",
+    "            yield i\n",
+    "        i += 1\n",
+    "n = int(input())\n",
+    "values = []\n",
+    "for i in NumGenerator(n):\n",
+    "    values.append(str(i))\n",
+    "print(','.join(values))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Question 70\n",
+    "\n",
+    "Please write assert statements to verify that every number in the list [2,4,6,8] is even.\n",
+    "\n",
+    "Hints: Use \"assert expression\" to make assertion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m li \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m li:\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m i\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(li)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "li = [2,4,6,8]\n",
+    "for i in li:\n",
+    "    assert i%2==0"
+   ]
   }
  ],
  "metadata": {
