--- a/Interview Questions/prep_1/sprint_1.ipynb
+++ b/Interview Questions/prep_1/sprint_1.ipynb
@@ -1,89 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "123ab! - 112233aabb!!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "112233aabb!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def str2(str):\n",
-    "    new_str = ''\n",
-    "    for char in str:\n",
-    "        new_str += char*2\n",
-    "    return new_str\n",
-    "print(str2('123ab!'))\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "Avoid Multiple IF-Else Condition using Dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
-     ]
-    }
-   ],
-   "source": [
-    "def add(a,b):\n",
-    "    return (a+b)\n",
-    "def sub(a,b):\n",
-    "    return (a-b)\n",
-    "def multiply(a,b):\n",
-    "    return (a*b)\n",
-    "def division(a,b):\n",
-    "    return (a/b)\n",
-    "dic_cal = {\n",
-    "    'add'      : add,\n",
-    "    'sub'      : sub,\n",
-    "    'multiply' : multiply,\n",
-    "    'division' : division\n",
-    "}\n",
-    "print(dic_cal['multiply'](3,4))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "CHECK IF SUM OF ANY TWO NUMBERS IS ZERO OR NOT"
+    "# 1. CHECK IF SUM OF ANY TWO NUMBERS IS ZERO OR NOT"
    ]
   },
   {
@@ -95,57 +18,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no\n"
+      "True\n"
      ]
     }
    ],
    "source": [
-    "def sum_zero(a,b):\n",
-    "    if a+b == 0:\n",
-    "        return ('yes')\n",
-    "    return ('no')\n",
-    "print(sum_zero(3,7))\n"
+    "def sum_check(l):\n",
+    "    if len(l)<2:\n",
+    "        return False\n",
+    "    l1 = set(l)\n",
+    "    for i in l:\n",
+    "        if -i in l1:\n",
+    "            return True\n",
+    "    return False\n",
+    "l = [1,2,3,4,5,-1,-2,2,5,4]\n",
+    "print(sum_check(l))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. FIND A NON - NEGATIVE INTEGER THAT IS NOT IN THE ARRAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def check_sum(l):\n",
-    "    if len(l)<2:\n",
-    "        return False\n",
+    "l = [0,1,2,3,4,5,7,8,9]\n",
+    "def find_missing_number(l):\n",
+    "    list_dict = {}\n",
     "    for i in l:\n",
-    "        if -i in set(l):\n",
-    "            return True\n",
-    "        return False\n",
-    "l = [1,2,-2,4,3]\n",
-    "print(check_sum(l))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "CHECK IF THE LIST IS SORTED OR NOT"
+    "        list_dict[i] = True\n",
+    "    \n",
+    "    for i in range(len(l)+1):\n",
+    "        if not list_dict.get(i):\n",
+    "            return i\n",
+    "    return None\n",
+    "find_missing_number(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. CHECK IF A STRING IS PALINDROME OR NOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -157,12 +98,242 @@
     }
    ],
    "source": [
-    "def sortt(l):\n",
-    "    if sorted(l):\n",
-    "        return True\n",
-    "    return False\n",
-    "l = [1, 2, 3, 5, 6, 7]\n",
-    "print(sortt(l))\n"
+    "def is_palindrome(str):\n",
+    "    len_str = len(str)\n",
+    "    c = 0\n",
+    "    for i in range(len_str):\n",
+    "        if(str[i]==str[len_str-i-1]):\n",
+    "            continue\n",
+    "        else :\n",
+    "            c = 1\n",
+    "            break\n",
+    "    return c == 0\n",
+    "print(is_palindrome('abba'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'palindorm'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_palindrome(str):\n",
+    "    s1 = str[::-1]\n",
+    "    if str == s1:\n",
+    "        return 'palindorm'\n",
+    "    return 'not'\n",
+    "str = input()\n",
+    "is_palindrome(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. SWAPPING OF TWO NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap_number(a,b):\n",
+    "    c = a\n",
+    "    a = b\n",
+    "    b = c\n",
+    "    return a,b\n",
+    "print(swap_number(5,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap_number(a,b):\n",
+    "    a,b = b,a\n",
+    "    return a,b\n",
+    "print(swap_number(5,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. RECURSION: FACTORIAL OF A GIVEN NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 5\n",
+      "4 20\n",
+      "3 60\n",
+      "2 120\n",
+      "1 120\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact_1(n):\n",
+    "    fact = 1\n",
+    "    for i in range(n,0,-1):\n",
+    "        fact*=i\n",
+    "        print(i,fact)\n",
+    "    return fact\n",
+    "print(fact_1(5))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40320"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fact(x):\n",
+    "    if x<1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fact(x-1)*x\n",
+    "fact(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. RECURSION: COUNT OF ELEMENTS IN A LIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5,6,7,8,9]\n",
+    "def count_l(l):\n",
+    "    if not l :\n",
+    "        return 0\n",
+    "    return 1 + count_l(l[1:])\n",
+    "count_l(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. RECURSION: Repeat Each character N times\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HHHeeellllllooo\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'Hello'\n",
+    "s1 = ''\n",
+    "for i in s:\n",
+    "    s1 = s1+i*3\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RRRaaahhhuuulll\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multi_str(s,n):\n",
+    "    if len(s) == 0:\n",
+    "        return ''\n",
+    "    return s[0]*n+multi_str(s[1:],n)\n",
+    "print(multi_str('Rahul',3))"
    ]
   }
  ],
