--- a/Interview Questions/prep_1/sprint_1.ipynb
+++ b/Interview Questions/prep_1/sprint_1.ipynb
@@ -335,6 +335,241 @@
     "    return s[0]*n+multi_str(s[1:],n)\n",
     "print(multi_str('Rahul',3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8 REVERSE ORDER OF WORDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'me is This'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senetence = 'This is me'\n",
+    "def words_reverse(senetence):\n",
+    "    list_words = []\n",
+    "    lst_sentence = senetence.split(' ')\n",
+    "    while (len(lst_sentence))>0:\n",
+    "        word = lst_sentence.pop()\n",
+    "        list_words.append(word)\n",
+    "    return ' '.join(list_words)\n",
+    "words_reverse(senetence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9. FIND K MOST FREQUENT ELEMENT OF AN ARRAY\n",
+    "# input array = [1,1,1,2,2,3]\n",
+    "#output = [1,2]\n",
+    "# k =2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def k_most_element(input_array,k):\n",
+    "    base_dict = dict()\n",
+    "    final_set = set()\n",
+    "    for i in input_array:\n",
+    "        if i in base_dict:\n",
+    "            base_dict[i] += 1\n",
+    "            if base_dict[i] >= k:\n",
+    "                final_set.add(i)\n",
+    "        else:\n",
+    "            base_dict[i] = 1\n",
+    "    return list(final_set)\n",
+    "print(k_most_element([1,1,1,2,2,3],2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10. Avoid Multiple IF-Else Condition using Dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "-1\n",
+      "42\n",
+      "0.8571428571428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a,b):\n",
+    "    return a+b\n",
+    "def sub(a,b):\n",
+    "    return a-b\n",
+    "def multiply(a,b):\n",
+    "    return a*b\n",
+    "def division(a,b):\n",
+    "    return a/b\n",
+    "\n",
+    "dict_calculator = {\n",
+    "    'add'      : add,\n",
+    "    'sub'      : sub,\n",
+    "    'multiply' : multiply,\n",
+    "    'division' : division\n",
+    "}\n",
+    "\n",
+    "print(dict_calculator['add'](6,7))\n",
+    "print(dict_calculator['sub'](6,7))   \n",
+    "print(dict_calculator['multiply'](6,7))\n",
+    "print(dict_calculator['division'](6,7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11. CHECK IF THE LIST IS SORTED OR NOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_list_sorted(list):\n",
+    "    k = 0\n",
+    "    for i in range(len(list)-1):\n",
+    "        if (list[i] <= list[i+1]):\n",
+    "            pass\n",
+    "        else:\n",
+    "            k = 1\n",
+    "            break\n",
+    "    return k == 0\n",
+    "print(check_list_sorted([1,3,8,9,10]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_list_sorted(list):\n",
+    "    return all((list[i] <= list[i+1]) for i in range(len(list)-1))\n",
+    "print(check_list_sorted([1,11,8,9,10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 12. Count the Frequency of Elements in a List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 2, 2: 2, 3: 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counter(input_list):\n",
+    "    freq = {}\n",
+    "    for i in input_list:\n",
+    "        freq[i] = freq.get(i,0) +1\n",
+    "    return freq\n",
+    "#sorted\n",
+    "print(counter([1,2,3,3,2,1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HellO GeekS\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 13. Convert Each Word to the Upper Case of Sentence in Python\n",
+    "input_str = 'Hello Geeks'\n",
+    "lst_str = input_str.split(' ')\n",
+    "\n",
+    "def convert_char(s):\n",
+    "    return s[0].upper()+s[1:-1]+s[-1].upper()\n",
+    "l = [convert_char(i) for i in lst_str]\n",
+    "print(' '.join(l))"
+   ]
   }
  ],
  "metadata": {
