--- a/Interview Questions/prep_1/sprint_1.ipynb
+++ b/Interview Questions/prep_1/sprint_1.ipynb
@@ -570,6 +570,231 @@
     "l = [convert_char(i) for i in lst_str]\n",
     "print(' '.join(l))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30, 5, 7]\n",
+      "[30, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 14. Create a new list with only numerical values from each element without using loop\n",
+    "\n",
+    "lst = [\"30 Student\", \"5 Student\", \"7 Student\"]\n",
+    "l = [int(i.split()[0]) for i in lst]\n",
+    "print(l)\n",
+    "\n",
+    "l1 = list(map(lambda i: int(i.split()[0]),lst))\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5x1 = 5\n",
+      "5x2 = 10\n",
+      "5x3 = 15\n",
+      "5x4 = 20\n",
+      "5x5 = 25\n",
+      "5x6 = 30\n",
+      "5x7 = 35\n",
+      "5x8 = 40\n",
+      "5x9 = 45\n",
+      "5x10 = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 15. write a method that takes a number as parameter and generates multiplication table for that number.\n",
+    "def f_multiplication(n,x):\n",
+    "    for i in range(1,x+1):\n",
+    "        print(\"{}x{}\".format(n,i),\"=\",i*n)\n",
+    "f_multiplication(5,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16. Find whether a number is a Narcissistic number or not\n",
+    "#1634 = 1^4 + 6^4 + 3^4 + 4^4\n",
+    "# An n-digit number that is the sum of the nth powers of its digits is called an n-Narcissistic number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def f_narcisis(number):\n",
+    "    s = 0\n",
+    "    number_str = str(number)\n",
+    "    for i in number_str:\n",
+    "        s+=math.pow(int(i),len(number_str))\n",
+    "    if s == number:\n",
+    "        return \"Yes\"\n",
+    "    else:\n",
+    "        return \"no\"\n",
+    "print(f_narcisis(1634))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_narcisis(number):\n",
+    "    number_str = str(number)\n",
+    "    return \"Yes\" if sum([math.pow(int(i),len(number_str)) for i in number_str]) == number else 'No'\n",
+    "print(f_narcisis(1634))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 17. count lower chars and capital chars in a sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_countchars(input_str):\n",
+    "    cnt_lower,cnt_upper = 0,0\n",
+    "    for i in input_str:\n",
+    "        if i.islower():\n",
+    "            cnt_lower += 1\n",
+    "        elif i.isupper():\n",
+    "            cnt_upper += 1\n",
+    "    return cnt_upper,cnt_lower\n",
+    "input_str = \"Hello This is Me\"\n",
+    "print(f_countchars(input_str)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'small': 10, 'capital': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_count_chas(input_str):\n",
+    "    dict = {}\n",
+    "    dict[\"small\"] = len(list(filter(lambda input_str: input_str.islower(),input_str)))\n",
+    "    dict[\"capital\"] = len(list(filter(lambda input_str: input_str.isupper(),input_str)))\n",
+    "    return dict\n",
+    "print(f_count_chas(\"Hello This is Me\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#18 get the seccond smallest number from array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [5,2,3,2,3,4,9,1,5]\n",
+    "min_select = min(nums)\n",
+    "dict = {}\n",
+    "for i in nums:\n",
+    "    if i!=min_select:\n",
+    "        dict[i] = i - min_select\n",
+    "print(min(dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [5,2,3,2,3,4,9,1,5]\n",
+    "max_select = max(nums)\n",
+    "dict = {}\n",
+    "for i in nums:\n",
+    "    if i!=max_select:\n",
+    "        dict[i] = i - max_select\n",
+    "print(max(dict))"
+   ]
   }
  ],
  "metadata": {
