--- a/Interview Questions/prep_1/sprint_2.ipynb
+++ b/Interview Questions/prep_1/sprint_2.ipynb
@@ -300,6 +300,240 @@
     "            \n",
     "print(f_get_even(input_list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 24. Print elements in nested list in Python "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sam', 'Raish', 432, 'jailer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_find_list(input_list):\n",
+    "    l = []\n",
+    "    for i in input_list:\n",
+    "        if type(i) == list:\n",
+    "            l.extend(i)\n",
+    "    return l\n",
+    "input_list = [1,2,3,['sam','Raish'], 45,[432,'jailer'],43,'sam']\n",
+    "print(f_find_list(input_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'sam', 'Raish', 432, 'jailer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_find_list(input_list):\n",
+    "    l = []\n",
+    "    for i in input_list:\n",
+    "        if isinstance(i,list):\n",
+    "            l.extend(i)\n",
+    "    return l\n",
+    "input_list = [[1,2,3],['sam','Raish'], 45,[432,'jailer'],43,'sam']\n",
+    "print(f_find_list(input_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 25. One List Sort with Numerical Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Zaid30', 'mukesh50', 'Nishan99', 'Monu100', 'Sam200']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_sort_list(inp_list):\n",
+    "    l = []\n",
+    "    for i in inp_list:\n",
+    "        c = ''\n",
+    "        for j in i:\n",
+    "            if j.isdigit():\n",
+    "                c = c+j\n",
+    "        l.append((int(c),i))\n",
+    "    l.sort(key = lambda x: x[0])\n",
+    "    return [i[1] for i in l]\n",
+    "lst = ['Sam200', 'Monu100', 'Zaid30', 'mukesh50', 'Nishan99']\n",
+    "\n",
+    "print(f_sort_list(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Zaid30', 'mukesh50', 'Nishan99', 'Monu100', 'Sam200']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def f_sort_list(inp_list):\n",
+    "    l = []\n",
+    "    for i in inp_list:\n",
+    "        l.append((int(re.search(r'[0-9]*$',i).group()),i))\n",
+    "    l.sort(key = lambda x: x[0])\n",
+    "    return [i[1] for i in l]\n",
+    "lst = ['Sam200', 'Monu100', 'Zaid30', 'mukesh50', 'Nishan99']\n",
+    "\n",
+    "print(f_sort_list(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['01-Jan-2020', '21-Mar-2022', '11-Jun-2023', '12-Dec-2020']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f_replace_month(lst_dates):\n",
+    "    dict_month = {'01':'Jan','02':'Feb','03':'Mar','06':'Jun','12':'Dec'}\n",
+    "    l=[]\n",
+    "    for i in lst_dates:\n",
+    "        month_number = i.split('-')\n",
+    "        month_name = dict_month[month_number[1]]\n",
+    "        l.append(month_number[0]+'-'+month_name+'-'+month_number[2])\n",
+    "    return l\n",
+    "lst_dates = ['01-01-2020','21-03-2022','11-06-2023','12-12-2020']\n",
+    "f_replace_month(lst_dates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 3, 2: 3, 3: 2, 4: 1, 5: 1, 7: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 28. Flatten a list and count occurrences in Python\n",
+    "def f_get_count(input_list):\n",
+    "    dict = {}\n",
+    "    for i in input_list:\n",
+    "        for j in i:\n",
+    "            if j in dict:\n",
+    "                dict[j] += 1\n",
+    "            else:\n",
+    "                dict[j] = 1\n",
+    "    return dict\n",
+    "input_list = [[1,2],[3,4],[2,3],[5,1],[7,1,2]]\n",
+    "print(f_get_count(input_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 3, 2: 3, 3: 2, 4: 1, 5: 1, 7: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_get_count_1(input_list):\n",
+    "    dict = {}\n",
+    "    l = []\n",
+    "    for i in input_list:\n",
+    "        l.extend(i)\n",
+    "    for j in l:\n",
+    "        if j in dict:\n",
+    "            dict[j] += 1\n",
+    "        else:\n",
+    "            dict[j] = 1\n",
+    "    return dict\n",
+    "input_list = [[1,2],[3,4],[2,3],[5,1],[7,1,2]]\n",
+    "print(f_get_count_1(input_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 3, 2: 3, 3: 2, 4: 1, 5: 1, 7: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import chain\n",
+    "def f_get_count(input_l):\n",
+    "    dict = {}\n",
+    "    for j in (list(chain.from_iterable(input_l))):\n",
+    "        if j in dict:\n",
+    "            dict[j] += 1\n",
+    "        else:\n",
+    "            dict[j] = 1\n",
+    "    return dict\n",
+    "input_l = [[1,2],[3,4],[2,3],[5,1],[7,1,2]]\n",
+    "print(f_get_count(input_l))"
+   ]
   }
  ],
  "metadata": {
