--- a/Interview Questions/prep_1/sprint_2.ipynb
+++ b/Interview Questions/prep_1/sprint_2.ipynb
@@ -534,6 +534,171 @@
     "input_l = [[1,2],[3,4],[2,3],[5,1],[7,1,2]]\n",
     "print(f_get_count(input_l))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#29 Find out common letters between two string\n",
+    "#Find out all letters between two string using python\n",
+    "# Find out letters which is present in one string but not present in second and vice versa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Common letters:  {'s', 'r', 'g'}\n",
+      "All letters:  {'s', 'a', 'j', 't', 'i', 'p', ' ', 'e', 'o', 'k', 'g', 'd', 'c', 'r'}\n",
+      "present in first string but not in second string:  {'a', 'j', 't', 'i', 'p', ' '}\n",
+      "present in second string but not in first string:  {'o', 'e', 'k', 'd', 'c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_common_alpha(input1,input2):\n",
+    "    input1_set = set(input1)\n",
+    "    input2_set = set(input2)\n",
+    "    print(\"Common letters: \",input1_set&input2_set)\n",
+    "    print(\"All letters: \",input1_set|input2_set)\n",
+    "    print(\"present in first string but not in second string: \",input1_set-input2_set)\n",
+    "    print(\"present in second string but not in first string: \",input2_set-input1_set)\n",
+    "    \n",
+    "Input1 = 'sagar prajapati'\n",
+    "input2 = 'geekcoders'\n",
+    "f_common_alpha(Input1,input2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': 4, 'c': 3, 'a': 2, 'd': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {}\n",
+    "input = 'bbbbcccaad'\n",
+    "for i in input:\n",
+    "    if i in d:\n",
+    "        d[i] += 1\n",
+    "    else:\n",
+    "        d[i] = 1\n",
+    "        \n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_count_each_element(input):\n",
+    "    counter = 1\n",
+    "    l = []\n",
+    "    for i in range(1,len(input)):\n",
+    "        if input[i] == input[i-1]:\n",
+    "            counter += 1\n",
+    "        else:\n",
+    "            l.append(counter)\n",
+    "            counter =1\n",
+    "    l.append(counter)\n",
+    "    \n",
+    "    return l\n",
+    "input = 'bbbbcccaad'\n",
+    "print(f_count_each_element(input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_count_each_element_1(input):\n",
+    "    l = []\n",
+    "    input_set = set(input)\n",
+    "    for i in input_set:\n",
+    "        l.append(input.count(i))\n",
+    "    return l\n",
+    "input = 'bbbbcccaad'\n",
+    "print(f_count_each_element_1(input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_count_each_element_1(input):\n",
+    "    return [input.count(i) for i in set(input)]\n",
+    "input = 'bbbbcccaad'\n",
+    "print(f_count_each_element_1(input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('sagar', 90)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 31 highest marks\n",
+    "\n",
+    "def f_get_highest_score(input_list:list)->list:\n",
+    "    if len(input_list) == 0:\n",
+    "        return []\n",
+    "    max_marks = max(marks for name,marks in input_list)\n",
+    "    return [(name,marks) for name,marks in input_list if marks==max_marks]\n",
+    "student = [('David',46), ('same',56), ('sagar',90)]\n",
+    "print(f_get_highest_score(student))"
+   ]
   }
  ],
  "metadata": {
