--- a/Interview Questions/prep_1/sprint_2.ipynb
+++ b/Interview Questions/prep_1/sprint_2.ipynb
@@ -699,6 +699,155 @@
     "student = [('David',46), ('same',56), ('sagar',90)]\n",
     "print(f_get_highest_score(student))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 7, 9, 15, 12, 9, 18, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#32\n",
+    "input_list = [1,2,[7,9,[15,[12,9]],18,10]]\n",
+    "def f_flaten_list(input_list):\n",
+    "    l = []\n",
+    "    for i in input_list:\n",
+    "        if type(i) is list:\n",
+    "            l.extend(f_flaten_list(i))\n",
+    "        else:\n",
+    "            l.append(i)\n",
+    "    return l\n",
+    "print(f_flaten_list(input_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 7, 9, 15, 12, 9, 18, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_list=[]\n",
+    "\n",
+    "def flatten(list2):\n",
+    "    for i in list2:\n",
+    "        if type(i)==int:\n",
+    "            output_list.append(i)\n",
+    "        else:\n",
+    "            flatten(i)\n",
+    "    return output_list\n",
+    "list2 = [1,2,[7,9,[15,[12,9]],18,10]]\n",
+    "print(flatten(list2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#33 find the items greater than itself after its index in python list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99 0 []\n",
+      "28 3 [55, 76, 99]\n",
+      "12 5 [55, 13, 15, 76, 99]\n",
+      "55 2 [76, 99]\n",
+      "13 3 [15, 76, 99]\n",
+      "15 2 [76, 99]\n",
+      "76 1 [99]\n",
+      "99 0 []\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = [99,28,12,55,13,15,76,99]\n",
+    "\n",
+    "for i in input:\n",
+    "    count = 0\n",
+    "    output_list = []\n",
+    "    for j in range(input.index(i),len(input)):\n",
+    "        if (input[j]>i):\n",
+    "            output_list.append(input[j])\n",
+    "            count += 1\n",
+    "    print(i,count,output_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     domain \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m@\u001b[39m\u001b[38;5;124m'\u001b[39m[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m initial[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m (\u001b[38;5;28mlen\u001b[39m(initial)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39minitial[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m@\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mdomain\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mf_hide_email\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[5], line 5\u001b[0m, in \u001b[0;36mf_hide_email\u001b[1;34m(input)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf_hide_email\u001b[39m(\u001b[38;5;28minput\u001b[39m):\n\u001b[0;32m      4\u001b[0m     initial \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m@\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m----> 5\u001b[0m     domain \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m@\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m initial[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m (\u001b[38;5;28mlen\u001b[39m(initial)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39minitial[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m@\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mdomain\n",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "#34 \n",
+    "input = 'geekcoders@gmail.com'\n",
+    "def f_hide_email(input):\n",
+    "    initial = input.split('@')[0]\n",
+    "    domain = input.split('@'[1])\n",
+    "    return initial[0] + (len(initial)-2)*'*'+initial[-1]+'@'+domain\n",
+    "print(f_hide_email(input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#35 string is anagram or not\n",
+    "def f_string_anagram(str1,str2):\n",
+    "    if sorted(str1) == sorted(str2):\n",
+    "        return 'Yes'\n",
+    "    else:\n",
+    "        return 'No'\n",
+    "str1 = 'abc'\n",
+    "str2 = 'bca'\n",
+    "print(f_string_anagram(str1,str2))"
+   ]
   }
  ],
  "metadata": {
