--- a/Interview Questions/prep_1/sprint_2.ipynb
+++ b/Interview Questions/prep_1/sprint_2.ipynb
@@ -848,6 +848,59 @@
     "str2 = 'bca'\n",
     "print(f_string_anagram(str1,str2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1024\n"
+     ]
+    }
+   ],
+   "source": [
+    "#36 Write a program to find the square of the largest element in an array\n",
+    "def f_find_largest(arr):\n",
+    "    largest = arr[0]\n",
+    "    for i in arr:\n",
+    "        if i > largest:\n",
+    "            largest = i\n",
+    "    return largest**2\n",
+    "arr = [10, 5, 8, 20, 3,9,6,32,26]\n",
+    "print(f_find_largest(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8: 1, 45: 1, 25: 3, 6: 1, 11: 1, 29: 1, 42: 2, 14: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#37 Write a program to find the number of times a number exists in a list. return in descending order of number of \n",
+    "# occurrences a number exists\n",
+    "def f_find_occur(l):\n",
+    "    d = {}\n",
+    "    for i in l:\n",
+    "        if i in d:\n",
+    "            d[i] += 1\n",
+    "        else:\n",
+    "            d[i] = 1\n",
+    "    return d\n",
+    "l = [ 8,45,25,6, 11, 29, 42, 25, 14,42,25]\n",
+    "print(f_find_occur(l))"
+   ]
   }
  ],
  "metadata": {
