--- a/LeetCode_Python/1.TwoSum.ipynb
+++ b/LeetCode_Python/1.TwoSum.ipynb
@@ -43,40 +43,78 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "1. first store the length of variable in another variable\n",
-    "2. start the for loop till -1\n",
-    "3. star the j loop till n\n",
-    "4. then we check if num[i] + num[j] == target\n",
-    "5. if yes we return the i and j"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "class Solution:\n",
-    "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
+    "\n",
+    "def twoSum(nums: List[int], target: int):\n",
     "        n = len(nums)\n",
     "        for i in range(n-1):\n",
     "            for j in range(i+1,n):\n",
     "                if nums[i] + nums[j] == target:\n",
     "                    return [i,j]\n",
-    "        return []"
+    "        return []\n",
+    "\n",
+    "nums = [3, 2, 4]\n",
+    "target = 6\n",
+    "print(twoSum(nums,target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def twoSum(nums,target):\n",
+    "    for i in range(len(nums)-1):\n",
+    "        for j in range(i+1,len(nums)):\n",
+    "            if nums[i] + nums[j] == target:\n",
+    "                return [i,j]\n",
+    "    return []\n",
+    "\n",
+    "nums = [3,2,4]\n",
+    "target = 6\n",
+    "print(twoSum(nums,target))\n",
+    "            "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
