--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -128,6 +128,76 @@
     "print(result2)  \n",
     "print(result3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uppercase letters: 2\n",
+      "Lowercase letters: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4. Write a python function that accepts a string and calculates the number of upper case letters and lower case letters.\n",
+    "def count_upper_lower(s):\n",
+    "    upper_count = 0\n",
+    "    lower_count = 0\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if char.isupper():\n",
+    "            upper_count += 1\n",
+    "        elif char.islower():\n",
+    "            lower_count += 1\n",
+    "    \n",
+    "    return upper_count, lower_count\n",
+    "\n",
+    "# Example usage\n",
+    "string = \"Hello World!\"\n",
+    "upper, lower = count_upper_lower(string)\n",
+    "print(f\"Uppercase letters: {upper}\")\n",
+    "print(f\"Lowercase letters: {lower}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssstzzzzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5. Write a program that accepts input in this form: s3t1z5. Here any character is followed by a number. \n",
+    "# The program should return a string where the character is repeated for the corresponding number of times.\n",
+    "\n",
+    "def repeat_characters(s):\n",
+    "    result = \"\"\n",
+    "    i = 0\n",
+    "    \n",
+    "    while i < len(s):\n",
+    "        char = s[i]\n",
+    "        count = int(s[i + 1])\n",
+    "        result += char * count\n",
+    "        i += 2\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "# Example usage\n",
+    "input_str = \"s3t1z5\"\n",
+    "output_str = repeat_characters(input_str)\n",
+    "print(output_str)  # Output: ssstzzzzz"
+   ]
   }
  ],
  "metadata": {
