--- a/LeetCode_Python/13.RomanToInteger.ipynb
+++ b/LeetCode_Python/13.RomanToInteger.ipynb
@@ -70,6 +70,24 @@
     "                ans += rm[s[i]]\n",
     "        return ans       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def romanToInt(self, s: str) -> int:\n",
+    "        roman = {'I':1,'V':5,'X':10,'L':50,'C':100,'D':500,'M':1000,'IV':4,'IX':9,'XL':40,'XC':90,'CD':400,'CM':900}\n",
+    "        ans = 0\n",
+    "        for i in range(len(s)-1):\n",
+    "            if roman[s[i]] < roman[s[i+1]]:\n",
+    "                ans -= roman[s[i]]\n",
+    "            else:\n",
+    "                ans += roman[s[i]]\n",
+    "        return ans+roman[s[-1]]"
+   ]
   }
  ],
  "metadata": {
