--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -198,6 +198,165 @@
     "output_str = repeat_characters(input_str)\n",
     "print(output_str)  # Output: ssstzzzzz"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "She\n",
+      "sells\n",
+      "seashells\n",
+      "seashore.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6. Take a sentence as input and print only the words that start with “s” in the sentence.\n",
+    "def print_s_words(sentence):\n",
+    "    words = sentence.split()\n",
+    "    s_words = [word for word in words if word.lower().startswith('s')]\n",
+    "    for word in s_words:\n",
+    "        print(word)\n",
+    "\n",
+    "# Example usage\n",
+    "sentence = \"She sells seashells by the seashore.\"\n",
+    "print_s_words(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 23\n",
+      "c: 15\n",
+      "e: 33\n",
+      "g: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7. From a dictionary, print only the items with an odd value of less than 45.\n",
+    "def print_odd_values_less_than_45(input_dict):\n",
+    "    for key, value in input_dict.items():\n",
+    "        if value < 45 and value % 2 != 0:\n",
+    "            print(f\"{key}: {value}\")\n",
+    "\n",
+    "# Example usage\n",
+    "input_dict = {\n",
+    "    'a': 23,\n",
+    "    'b': 50,\n",
+    "    'c': 15,\n",
+    "    'd': 42,\n",
+    "    'e': 33,\n",
+    "    'f': 48,\n",
+    "    'g': 9\n",
+    "}\n",
+    "print_odd_values_less_than_45(input_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8. Write a program to count pairs of elements of a list with a given sum\n",
+    "\n",
+    "def count_pairs_with_sum(input_list, target_sum):\n",
+    "    count = 0\n",
+    "    seen = {}\n",
+    "    \n",
+    "    for number in input_list:\n",
+    "        complement = target_sum - number\n",
+    "        if complement in seen:\n",
+    "            count += seen[complement]\n",
+    "        \n",
+    "        if number in seen:\n",
+    "            seen[number] += 1\n",
+    "        else:\n",
+    "            seen[number] = 1\n",
+    "    \n",
+    "    return count\n",
+    "\n",
+    "# Example usage\n",
+    "input_list = [1, 5, 7, -1, 5]\n",
+    "target_sum = 6\n",
+    "print(count_pairs_with_sum(input_list, target_sum))  # Output: 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "efd\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9. Write a python program to find the common characters from two input strings.\n",
+    "def common_characters(str1, str2):\n",
+    "    set1 = set(str1)\n",
+    "    set2 = set(str2)\n",
+    "    \n",
+    "    common_chars = set1.intersection(set2)\n",
+    "    \n",
+    "    return ''.join(common_chars)\n",
+    "\n",
+    "# Example usage\n",
+    "str1 = \"abcdef\"\n",
+    "str2 = \"defghij\"\n",
+    "print(common_characters(str1, str2))  # Output: def"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10. Swap two numbers by using one line of code.\n",
+    "a, b = 5, 10\n",
+    "a, b = b, a\n",
+    "print(a, b)  # Output: 10 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
