--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -273,33 +273,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "Count of pairs is 2\n"
      ]
     }
    ],
    "source": [
     "#8. Write a program to count pairs of elements of a list with a given sum\n",
     "\n",
-    "def count_pairs_with_sum(input_list, target_sum):\n",
+    "def getPairsCount(arr,n,k):\n",
     "    count = 0\n",
-    "    seen = {}\n",
-    "    \n",
-    "    for number in input_list:\n",
-    "        complement = target_sum - number\n",
-    "        if complement in seen:\n",
-    "            count += seen[complement]\n",
-    "        \n",
-    "        if number in seen:\n",
-    "            seen[number] += 1\n",
-    "        else:\n",
-    "            seen[number] = 1\n",
-    "    \n",
+    "    for i in range(0,n):\n",
+    "        for j in range(i+1,n):\n",
+    "            if arr[i] + arr[j] == k:\n",
+    "                count += 1\n",
     "    return count\n",
-    "\n",
-    "# Example usage\n",
-    "input_list = [1, 5, 7, -1, 5]\n",
-    "target_sum = 6\n",
-    "print(count_pairs_with_sum(input_list, target_sum))  # Output: 3"
+    "arr = [1, 5, 7, -1]\n",
+    "n = len(arr)\n",
+    "K = 6\n",
+    "print(\"Count of pairs is\",\n",
+    "      getPairsCount(arr, n, K))"
    ]
   },
   {
@@ -350,13 +342,6 @@
     "a, b = b, a\n",
     "print(a, b)  # Output: 10 5"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
