--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -342,6 +342,49 @@
     "a, b = b, a\n",
     "print(a, b)  # Output: 10 5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#11. Write a program to take two lists and check if the product of even position elements from the first list is completely \n",
+    "# divisible by the sum of odd position elements from the second list.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h*llo\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12. Write a function that will take a string and a character as arguments and check if the character is present in the \n",
+    "# string then it will be replaced with a “*”.\n",
+    "\n",
+    "def replace_char(s,char):\n",
+    "    modified_str = ''\n",
+    "    for i in range(0,len(s)):\n",
+    "        if s[i] == char:\n",
+    "            modified_str += '*'\n",
+    "        else:\n",
+    "            modified_str += s[i]\n",
+    "    return modified_str\n",
+    "s = 'hallo'\n",
+    "char = 'a'\n",
+    "print(replace_char(s,char))\n",
+    "  \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
