--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -345,13 +345,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of even position elements from list1 is not divisible by the sum of odd position elements from list2.\n"
+     ]
+    }
+   ],
    "source": [
     "#11. Write a program to take two lists and check if the product of even position elements from the first list is completely \n",
     "# divisible by the sum of odd position elements from the second list.\n",
-    "\n"
+    "\n",
+    "def check_divisibility(list1, list2):\n",
+    "    even_position_list1 = [list1[i] for i in range(len(list1)) if i%2!=0]\n",
+    "    odd_positions_list2 = [list2[i] for i in range(len(list2)) if i % 2 == 0]\n",
+    "    \n",
+    "    product_even_list1 = 1\n",
+    "    for i in even_position_list1:\n",
+    "        product_even_list1 *= i\n",
+    "        \n",
+    "    sum_odd_list2 = sum(odd_positions_list2)\n",
+    "    \n",
+    "    if sum_odd_list2 != 0 and product_even_list1 % sum_odd_list2 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "list1 = [2, 4, 6, 8, 10]   \n",
+    "list2 = [1, 3, 5, 7, 9] \n",
+    "\n",
+    "if check_divisibility(list1, list2):\n",
+    "    print(\"The product of even position elements from list1 is divisible by the sum of odd position elements from list2.\")\n",
+    "else:\n",
+    "    print(\"The product of even position elements from list1 is not divisible by the sum of odd position elements from list2.\")\n"
    ]
   },
   {
