--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -415,6 +415,62 @@
     "  \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hll Wrld\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13. Write a program to delete vowels from a string.\n",
+    "\n",
+    "def delete_vowels(s):\n",
+    "    s1 = ''\n",
+    "    vowels = 'aeiouAEIOU'\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] not in vowels:\n",
+    "            s1 += s[i]\n",
+    "    return s1\n",
+    "\n",
+    "s = 'Hello World'\n",
+    "print(delete_vowels(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GksfrGks -  Cmptr Scnc Prtl fr Gks\n",
+      "Lvng Pythn LL\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rem_vowel(string): \n",
+    "    vowels = ['a','e','i','o','u'] \n",
+    "    result = [letter for letter in string if letter.lower() not in vowels] \n",
+    "    result = ''.join(result) \n",
+    "    print(result) \n",
+    "  \n",
+    "# Driver program \n",
+    "string = \"GeeksforGeeks - A Computer Science Portal for Geeks\"\n",
+    "rem_vowel(string) \n",
+    "string = \"Loving Python LOL\"\n",
+    "rem_vowel(string) "
+   ]
   }
  ],
  "metadata": {
