--- a/Interview Questions/sprint_3.ipynb
+++ b/Interview Questions/sprint_3.ipynb
@@ -471,6 +471,43 @@
     "string = \"Loving Python LOL\"\n",
     "rem_vowel(string) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'l')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14. Write a program to count the highest occurring/maximum frequency character in a string.\n",
+    "\n",
+    "def highest_frequency_char(s):\n",
+    "    char_count = {}\n",
+    "    for i in s:\n",
+    "        if i in char_count:\n",
+    "            char_count[i] += 1\n",
+    "        else:\n",
+    "            char_count[i] = 1\n",
+    "\n",
+    "    max_freq = 0\n",
+    "    max_char = ''\n",
+    "\n",
+    "    for char, freq in char_count.items():\n",
+    "        if freq > max_freq:\n",
+    "            max_freq = freq\n",
+    "            max_char = char\n",
+    "    return max_freq, max_char\n",
+    "s = 'Hello World'\n",
+    "print(highest_frequency_char(s))\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
